# final_work

./: Dockerfile
src/: CMakeLists.txt
src/external_libs/: CMakeLists.txt
src/external_libs/qcustomplot/: CMakeLists.txt
src/include/: agent_connection_client.h  agent_connection_server.h  agent_event.h  agent_proto.h  agent_trd.h  common.h  cred_validator.h  db_wrapper.h  edit_sensor_defs.h  event_writer.h  profile.h  srvplg_itf.h  tcp_listen_server.h  test_lib.h  view_cmd.h  view_connection_client.h  view_connection_server.h  view_connection_trd.h  view_data_defs.h  view_plg_ids.h  viewplg_itf.h
src/libs/: CMakeLists.txt
src/libs/agent_connection_client/: CMakeLists.txt  agent_connection_client.cpp
src/libs/agent_connection_server/: CMakeLists.txt  agent_connection_server.cpp
src/libs/agent_event/: CMakeLists.txt  agent_event.cpp
src/libs/agent_trd/: CMakeLists.txt  agent_trd.cpp
src/libs/cred_validator/: CMakeLists.txt  cred_validator.cpp
src/libs/db_wrapper/: CMakeLists.txt  db_wrapper.cpp
src/libs/event_writer/: CMakeLists.txt  event_writer.cpp
src/libs/tcp_listen_server/: CMakeLists.txt  tcp_listen_server.cpp
src/libs/view_cmd/: CMakeLists.txt  view_cmd.cpp
src/libs/view_connection_client/: CMakeLists.txt  view_connection_client.cpp
src/libs/view_connection_server/: CMakeLists.txt  view_connection_server.cpp
src/libs/view_connection_trd/: CMakeLists.txt  view_connection_trd.cpp
src/srv_plg/: CMakeLists.txt
src/srv_plg/srv_plg_edit_sensor/: CMakeLists.txt  db_wrapper_edit_sensor.cpp  db_wrapper_edit_sensor.h  edit_sensor.cpp  edit_sensor.h
src/srv_plg/srv_plg_view_data/: CMakeLists.txt  db_wrapper_view_data.cpp  db_wrapper_view_data.h  view_data.cpp  view_data.h
src/view_plg/: CMakeLists.txt
src/view_plg/view_plg_edit_sensor/: CMakeLists.txt  delegate.cpp  delegate.h  edit_sensor.cpp  edit_sensor.h  model.cpp  model.h  widget.cpp  widget.h
src/view_plg/view_plg_view_data/: CMakeLists.txt  add_sensor_dialog.cpp  add_sensor_dialog.h  add_sensor_model.cpp  add_sensor_model.h  view_data.cpp  view_data.h  widget.cpp  widget.h
