add_subdirectory( agent_connection_client )
add_subdirectory( agent_connection_server )
add_subdirectory( agent_trd )
add_subdirectory( agent_event )
add_subdirectory( event_writer )
add_subdirectory( cred_validator )
add_subdirectory( db_wrapper )
add_subdirectory( tcp_listen_server )
add_subdirectory( view_cmd )
add_subdirectory( view_connection_server )
add_subdirectory( view_connection_trd )
add_subdirectory( view_connection_client )
